--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     </header>
 
     <main>
+
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <h1 class="mb-4">Welcome to our Store!</h1>
+            </div>
+        </div>
         <!-- Carousel -->
         <div id="slides" class="carousel slide">
             <div class="carousel-inner">
@@ -63,6 +69,240 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+        <div id="filters__content">
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <h1 class="mb-4">Our Products</h1>
+                </div>
+            </div>
+            <!-- Filter Buttons -->
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center">
+                        <button id="foodCategoriesBtn" type="button" class="btn btn-primary mx-2" data-toggle="collapse"
+                            data-target="#foodCategories" aria-expanded="false" aria-controls="foodCategories">Food
+                            Categories</button>
+                        <button id="beverageCategoriesBtn" type="button" class="btn btn-primary mx-2"
+                            data-toggle="collapse" data-target="#beverageCategories" aria-expanded="false"
+                            aria-controls="beverageCategories">Beverage Categories</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Categories -->
+            <div id="foodCategories">
+                <div class="container my-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 text-center">
+                            <h2 class="mb-4">Food</h2>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Breakfast" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Breakfast</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Lunch" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lunch</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Dinner" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Snacks" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Snacks</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <div class="display-flex">
+                                <a href="#" class="btn btn-primary">See All</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <!-- Beverages Categories -->
+            <div id="beverageCategories">
+                <div class="container my-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 text-center">
+                            <h2 class="mb-4">Beverages</h2>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Breakfast" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">B1</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Lunch" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">B2</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Dinner" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">B3</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 text-center mb-4">
+                            <div class="card">
+                                <img src="https://via.placeholder.com/400x300.png?text=Snacks" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">B4</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Explore</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <div class="display-flex">
+                                <a href="#" class="btn btn-primary">See All</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+            <script>
+                document.getElementById("beverageCategoriesBtn").addEventListener("click", function () {
+                    // Get the elements that need to be updated
+                    var foodCategoriesTitle = document.querySelector("#foodCategories h2");
+                    var foodCategoriesCards = document.querySelectorAll("#foodCategories .card");
+
+                    // Hide the food categories content
+                    document.querySelector("#foodCategories").classList.add("d-none");
+
+                    // Show the beverage categories content
+                    document.querySelector("#beverageCategories").classList.remove("d-none");
+
+                    // Update the title of the beverage categories section
+                    document.querySelector("#beverageCategories h2").textContent = "Beverage Categories";
+
+                    // Update the outline of the buttons
+                    document.querySelector("#foodCategoriesBtn").classList.remove("btn-outline-primary");
+                    document.querySelector("#beverageCategoriesBtn").classList.add("btn-outline-primary");
+                });
+
+                document.getElementById("foodCategoriesBtn").addEventListener("click", function () {
+                    // Get the elements that need to be updated
+                    var beverageCategoriesTitle = document.querySelector("#beverageCategories h2");
+                    var beverageCategoriesCards = document.querySelectorAll("#beverageCategories .card");
+
+                    // Hide the beverage categories content
+                    document.querySelector("#beverageCategories").classList.add("d-none");
+
+                    // Show the food categories content
+                    document.querySelector("#foodCategories").classList.remove("d-none");
+
+                    // Update the title of the food categories section
+                    document.querySelector("#foodCategories h2").textContent = "Food Categories";
+
+                    // Update the outline of the buttons
+                    document.querySelector("#beverageCategoriesBtn").classList.remove("btn-outline-primary");
+                    document.querySelector("#foodCategoriesBtn").classList.add("btn-outline-primary");
+                });
+            </script>
+        </div>
+
+        <!-- Beverage Categories -->
+        <!-- <div class="collapse" id="beverageCategories">
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center">
+                        <h2 class="mb-4">Beverage Categories</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-4 text-center mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Soft Drinks</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Coffee & Tea</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Juices & Smoothies</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+
 
     </main>
 </body>
