--- a/pages/beverages.html
+++ b/pages/beverages.html
@@ -5,10 +5,161 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beverages</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="js/bootstrap.bundle.js">
+    </script>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Daniel's Store</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="food.html">Food Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="beverages.html">Beverage Categories</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <style>
+            .flex-container {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+                gap: 4rem;
+            }
+
+            .card {
+                max-width: 25%;
+                height: 100px;
+                background-color: white;
+                border: 1px solid black;
+                border-radius: 5px;
+                box-shadow: 0px 0px 5px gray;
+            }
+
+            .card-image {
+                width: 200px;
+                height: 200px;
+                background-image: url('../images/beverage.png');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+        </style>
+
+        <div class="row justify-content-center text-white">
+            <div class="col-md-6 text-center">
+                <br>
+                <h1 class="mb-4">Check out our Beverages categories!</h1>
+            </div>
+        </div>
+
+        <div class="flex-container">
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+            <div class="card card-image"></div>
+
+        </div>
+    </main>
+    <footer id="footersection" class="bg-dark text-center text-lg-start">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase text-white">Footer Content</h5>
+
+                    <p id="footertext">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
+                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+                        voluptatem veniam, est atque cumque eum delectus sint!
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase text-white">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-light">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-0 text-white">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-light">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-light">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            <p class="text-white-50">
+                © 2023 Daniel Alvarez - UNIR
+            </p>
+        </div>
+    </footer>
 
 </body>
 
