--- a/pages/food.html
+++ b/pages/food.html
@@ -17,14 +17,16 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">Daniel's Store</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link active" aria-current="page"
+                                href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="food.html">Food Categories</a>
@@ -111,7 +113,8 @@
 
                     <p id="footertext">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
+                        aliquam
                         voluptatem veniam, est atque cumque eum delectus sint!
                     </p>
                 </div>
