--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">Daniel's Store</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -61,11 +62,13 @@
                     <img class="d-block w-100" src="images/shop.png" alt="Third slide">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#slides" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#slides"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#slides" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#slides"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -83,11 +86,13 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-md-6 text-center bg-transparent">
-                        <button id="foodCategoriesBtn" type="button" class="btn btn-success mx-2" data-toggle="collapse"
-                            data-target="#foodCategories" aria-expanded="false" aria-controls="foodCategories">Food
+                        <button id="foodCategoriesBtn" type="button" class="btn btn-success mx-2"
+                            data-toggle="collapse" data-target="#foodCategories"
+                            aria-expanded="false" aria-controls="foodCategories">Food
                             Categories</button>
-                        <button id="beverageCategoriesBtn" type="button" class="btn btn-success mx-2"
-                            data-toggle="collapse" data-target="#beverageCategories" aria-expanded="false"
+                        <button id="beverageCategoriesBtn" type="button"
+                            class="btn btn-success mx-2" data-toggle="collapse"
+                            data-target="#beverageCategories" aria-expanded="false"
                             aria-controls="beverageCategories">Beverage Categories</button>
                     </div>
                 </div>
@@ -107,8 +112,10 @@
                                 <img src="images/breakfast.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Breakfast</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -118,8 +125,10 @@
                                 <img src="images/lunch.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Lunch</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -129,8 +138,10 @@
                                 <img src="images/dinner.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -140,8 +151,10 @@
                                 <img src="images/snack.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Snacks</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -171,8 +184,10 @@
                                 <img src="images/soda.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Sodas</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -182,8 +197,10 @@
                                 <img src="images/milk.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Milks</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -193,8 +210,10 @@
                                 <img src="images/juices.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Juices</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -204,8 +223,10 @@
                                 <img src="images/alcohol.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Alcohol</h5>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
                                     <a href="#" class="btn btn-info">Explore</a>
                                 </div>
                             </div>
@@ -223,29 +244,37 @@
             </div>
 
             <script>
-                document.getElementById("beverageCategoriesBtn").addEventListener("click", function () {
-                    // Get the elements that need to be updated
-                    var foodCategoriesTitle = document.querySelector("#foodCategories h2");
-                    var foodCategoriesCards = document.querySelectorAll("#foodCategories .card");
+                document.getElementById("beverageCategoriesBtn").addEventListener("click",
+                    function () {
+                        // Get the elements that need to be updated
+                        var foodCategoriesTitle = document.querySelector("#foodCategories h2");
+                        var foodCategoriesCards = document.querySelectorAll(
+                            "#foodCategories .card");
 
-                    // Hide the food categories content
-                    document.querySelector("#foodCategories").classList.add("d-none");
+                        // Hide the food categories content
+                        document.querySelector("#foodCategories").classList.add("d-none");
 
-                    // Show the beverage categories content
-                    document.querySelector("#beverageCategories").classList.remove("d-none");
+                        // Show the beverage categories content
+                        document.querySelector("#beverageCategories").classList.remove(
+                        "d-none");
 
-                    // Update the title of the beverage categories section
-                    document.querySelector("#beverageCategories h2").textContent = "Beverage Categories";
+                        // Update the title of the beverage categories section
+                        document.querySelector("#beverageCategories h2").textContent =
+                            "Beverage Categories";
 
-                    // Update the outline of the buttons
-                    document.querySelector("#foodCategoriesBtn").classList.remove("btn-outline-primary");
-                    document.querySelector("#beverageCategoriesBtn").classList.add("btn-outline-primary");
-                });
+                        // Update the outline of the buttons
+                        document.querySelector("#foodCategoriesBtn").classList.remove(
+                            "btn-outline-primary");
+                        document.querySelector("#beverageCategoriesBtn").classList.add(
+                            "btn-outline-primary");
+                    });
 
                 document.getElementById("foodCategoriesBtn").addEventListener("click", function () {
                     // Get the elements that need to be updated
-                    var beverageCategoriesTitle = document.querySelector("#beverageCategories h2");
-                    var beverageCategoriesCards = document.querySelectorAll("#beverageCategories .card");
+                    var beverageCategoriesTitle = document.querySelector(
+                        "#beverageCategories h2");
+                    var beverageCategoriesCards = document.querySelectorAll(
+                        "#beverageCategories .card");
 
                     // Hide the beverage categories content
                     document.querySelector("#beverageCategories").classList.add("d-none");
@@ -254,11 +283,14 @@
                     document.querySelector("#foodCategories").classList.remove("d-none");
 
                     // Update the title of the food categories section
-                    document.querySelector("#foodCategories h2").textContent = "Food Categories";
+                    document.querySelector("#foodCategories h2").textContent =
+                        "Food Categories";
 
                     // Update the outline of the buttons
-                    document.querySelector("#beverageCategoriesBtn").classList.remove("btn-outline-primary");
-                    document.querySelector("#foodCategoriesBtn").classList.add("btn-outline-primary");
+                    document.querySelector("#beverageCategoriesBtn").classList.remove(
+                        "btn-outline-primary");
+                    document.querySelector("#foodCategoriesBtn").classList.add(
+                        "btn-outline-primary");
                 });
             </script>
         </div>
@@ -359,13 +391,13 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button"
+                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="false"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
+            <button class="carousel-control-next" type="button"
+                data-bs-target="#carouselExampleControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="false"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -381,7 +413,8 @@
 
                     <p id="footertext">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
+                        aliquam
                         voluptatem veniam, est atque cumque eum delectus sint!
                     </p>
                 </div>
